--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-vue-next": "^0.487.0",
     "nuxt": "^3.16.1",
     "nuxt-lucide-icons": "^1.0.5",
