--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/eslint": "^1.3.0",
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.17",
+    "@types/lodash-es": "^4.17.12",
     "@vueuse/core": "^13.0.0",
     "@vueuse/nuxt": "^13.0.0",
     "class-variance-authority": "^0.7.1",
@@ -21,6 +22,7 @@
     "daisyui": "^5.0.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.487.0",
     "nuxt": "^3.16.1",
     "nuxt-lucide-icons": "^1.0.5",
